--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
       "packages/*"
     ]
   },
+  "scripts": {
+    "relay": "relay-compiler"
+  },
   "devDependencies": {
-    "@redwoodjs/core": "0.38.3"
+    "@redwoodjs/core": "0.38.3",
+    "babel-plugin-relay": "^12.0.0",
+    "graphql": "^15.0.0",
+    "relay-compiler": "^12.0.0",
+    "relay-compiler-language-typescript": "^15.0.0"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
