--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,10 @@
     "@redwoodjs/web": "0.38.3",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-relay": "^12.0.0"
+  },
+  "devDependencies": {
+    "relay-config": "^12.0.0"
   }
 }
