--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     ]
   },
   "scripts": {
-    "relay": "relay-compiler"
+    "dev": "rw dev",
+    "relay": "yarn workspace web run relay-compiler"
   },
   "devDependencies": {
     "@redwoodjs/core": "0.38.3",
-    "babel-plugin-relay": "^12.0.0",
-    "graphql": "^15.0.0",
-    "relay-compiler": "^12.0.0",
-    "relay-compiler-language-typescript": "^15.0.0"
+    "babel-plugin-relay": "^12.0.0"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
