--- a/web/package.json
+++ b/web/package.json
@@ -16,10 +16,14 @@
     "@redwoodjs/forms": "0.38.3",
     "@redwoodjs/router": "0.38.3",
     "@redwoodjs/web": "0.38.3",
+    "@types/react-relay": "^11.0.2",
+    "@types/relay-compiler": "^8.0.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-relay": "^12.0.0"
+    "react-relay": "^12.0.0",
+    "relay-compiler": "^12.0.0",
+    "relay-compiler-language-typescript": "^15.0.0"
   },
   "devDependencies": {
     "relay-config": "^12.0.0"
