--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "^2.0.3",
-    "@redwoodjs/api": "0.38.3",
-    "@redwoodjs/graphql-server": "0.38.3"
+    "@redwoodjs/api": "^1.0.0-rc.1",
+    "@redwoodjs/graphql-server": "^1.0.0-rc.1"
   }
 }
