--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "relay": "yarn workspace web run relay-compiler"
   },
   "devDependencies": {
-    "@redwoodjs/core": "0.38.3",
-    "babel-plugin-relay": "^12.0.0"
+    "@redwoodjs/core": "^1.0.0-rc.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
@@ -25,5 +24,8 @@
   },
   "prisma": {
     "seed": "yarn rw exec seed"
+  },
+  "resolutions": {
+    "relay-compiler": "^13.0.0-rc.0"
   }
 }
