--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "seed": "yarn rw exec seed"
   },
   "resolutions": {
-    "relay-compiler": "^13.0.0-rc.0"
+    "relay-compiler": "^13.0.0-rc.0",
+    "typescript": "^4.5",
+    "graphql": "^15.0.0"
   }
 }
