--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "rw dev",
-    "relay": "yarn workspace web run relay-compiler"
+    "relay": "yarn workspace web run relay"
   },
   "devDependencies": {
     "@redwoodjs/core": "^1.0.0-rc.1"
@@ -24,8 +24,5 @@
   },
   "prisma": {
     "seed": "yarn rw exec seed"
-  },
-  "resolutions": {
-    "relay-compiler": "13.0.0-rc.1"
   }
 }
