--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@redwoodjs/core": "^1.0.0-rc.1"
   },
   "eslintConfig": {
-    "extends": "@redwoodjs/eslint-config",
+    "plugins": [
+      "relay"
+    ],
+    "extends": [
+      "@redwoodjs/eslint-config",
+      "plugin:relay/ts-recommended"
+    ],
     "root": true
   },
   "engines": {
@@ -24,5 +30,9 @@
   },
   "prisma": {
     "seed": "yarn rw exec seed"
+  },
+  "dependencies": {
+    "eslint-plugin-relay": "git://github.com/opencreek/eslint-plugin-relay#0c91b686ee23b3c1765ab02a537f03145fe08eb9",
+    "vscode-apollo-relay": "^1.5.2"
   }
 }
