--- a/web/package.json
+++ b/web/package.json
@@ -30,11 +30,13 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-relay": "^13.0.0-rc.1",
+    "react-relay": "^14.0.0",
     "relay-runtime": "^13.0.0-rc.1"
   },
   "devDependencies": {
+    "@types/react-relay": "^13.0.2",
+    "@types/relay-compiler": "^8.0.3",
     "babel-plugin-relay": "^13.0.0-rc.1",
-    "relay-compiler": "^13.0.0-rc.1"
+    "relay-compiler": "^14.0.0"
   }
 }
